feat: update domain

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -40,7 +40,7 @@
         <div class="card mb24">
             <p>© 2022 Shortable - Tool to shorten a long link.</p>
             <ul>
-                <li><a>Shortable.me</a></li>
+                <li><a>shortable.link</a></li>
                 <li><a>Privacy</a></li>
                 <li><a>Contact</a></li>
             </ul>
